# pops-core

./: .clang-format  .cppcheck_suppressions.txt  .cppcheck_suppressions_cpp.txt  .cppcheck_suppressions_hpp.txt  .cspell.json  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG_8md.html  CITATION.cff  CMakeLists.txt  CODE__OF__CONDUCT_8md.html  CONTRIBUTING_8md.html  Doxyfile  Img.cpp  Img.h  Makefile  README.md  README_8md.html  STYLE__GUIDE_8md.html  Spore.cpp  Spore.h  TECHNICALDEBT.md  TECHNICALDEBT_8md.html  annotated.html  cauchy__kernel_8hpp.html  cauchy__kernel_8hpp__dep__incl.map  cauchy__kernel_8hpp__dep__incl.md5  cauchy__kernel_8hpp__incl.map  cauchy__kernel_8hpp__incl.md5  cauchy__kernel_8hpp_source.html  classes.html  classpops_1_1AbstractTreatment-members.html  classpops_1_1AbstractTreatment.html  classpops_1_1AbstractTreatment__inherit__graph.map  classpops_1_1AbstractTreatment__inherit__graph.md5  classpops_1_1BaseTreatment-members.html  classpops_1_1BaseTreatment.html  classpops_1_1BaseTreatment__coll__graph.map  classpops_1_1BaseTreatment__coll__graph.md5  (+778 more)
tests/: CMakeLists.txt  test_competency_table.cpp  test_date.cpp  test_deterministic.cpp  test_distributions.cpp  test_environment.cpp  test_generator_provider.cpp  test_model.cpp  test_mortality.cpp  test_movements.cpp  test_multi_host_model.cpp  test_network.cpp  test_network_helpers.cpp  test_network_kernel.cpp  test_overpopulation_movements.cpp  test_pest_movements.cpp  test_quarantine.cpp  test_random.cpp  test_raster.cpp  test_scheduling.cpp  test_simulation.cpp  test_simulation_kernels.cpp  (+7 more)
(+202 files in other folders)
